--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <!-- android:theme="@style/AppTheme" -->
+        <!-- android:theme="@style/AppTheme"
+        android:screenOrientation="portrait" -->
         <activity
             android:name=".telaPrincipal"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
